--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 :root {
-    --primary-color: #fc0909;
+    --primary-color: #fc098b;
     --primary-color-light: #fffcfa;
-    --primary-color-dark: #dbaa09;
+    --primary-color-dark: #a709db;
     --text-dark: #18181b;
     --text-light: #6b7280;
     --white: #ffffff;
@@ -250,7 +250,7 @@ nav {
 }
 
 .magazine_container {
-    padding-top: 0;
+    padding-top: 1.5rem;
 }
 
 .magazine_container :is(.section_header,
@@ -267,7 +267,7 @@ nav {
     margin-inline: auto;
     padding: 3rem 1rem;
     /* overflow: hidden; */
-    box-shadow: 5px 5px 10px rgba(252, 9, 9, 0.14);
+    box-shadow: 5px 5px 10px rgba(175, 9, 252, 0.14);
     border-radius: 2rem;
 }
 
@@ -329,7 +329,7 @@ nav {
     padding: 1rem 1.2rem;
     position: relative;
     border-radius: 6px;
-    box-shadow: 1px 1px 15px rgba(255, 0, 0, 0.06);
+    box-shadow: 1px 1px 15px rgba(238, 0, 255, 0.06);
 }
 
 .left-container {
@@ -469,6 +469,7 @@ nav {
     font-weight: 700;
     margin-bottom: 15px;
     letter-spacing: 2px;
+    color: var(--primary-color-dark);
 }
 
 .box:hover {
