--- a/style.css
+++ b/style.css
@@ -856,6 +856,20 @@ textarea:focus {
     }
     .card {
         padding-bottom: 0;
+        margin: 0;
+        width: 100%;
+        /* box-sizing: border-box; */
+    }
+    .spotlight {
+        padding: 0rem;
+        margin: auto;
+        max-width: var(--max-width);
+    }
+    .image-content {
+        padding: 1rem;
+    }
+    .description {
+        font-size: 1rem;
     }
 }
 
